--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "electron ."
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^6.0.0"
+  }
 }
