--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^6.0.0"
+  },
+  "dependencies": {
+    "electron-routes": "^1.3.0",
+    "fs-extra": "^8.1.0"
   }
 }
